# StarUhyox

./: .gitignore  CMakeLists.txt  README.md
assets/models/: test.fbx
src/: Bullet.cpp  Bullet.h  BulletManager.cpp  BulletManager.h  Camera.h  CollisionEvent.h  CollisionManager.cpp  CollisionManager.h  DestroySystem.cpp  DestroySystem.h  EventBus.cpp  EventQueue.h  Player.cpp  Player.h  Stage.cpp  Stage.h  main.cpp
src/Core/: CollisionEvent.h  EventBus.h  EventQueue.cpp  EventQueue.h  GameObject.cpp  GameObject.h  Transform.cpp  Transform.h
src/Effects/: Explosion.h  ExplosionManager.cpp  ExplosionManager.h
src/Game/: Bullet.cpp  Bullet.h  BulletManager.h  ObjectPool.h  Player.cpp  Player.h
src/Graphics/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/Systems/: CollisionManager.cpp  CollisionManager.h  DestroySystem.cpp  DestroySystem.h  EffectSystem.cpp  EffectSystem.h  SoundSystem.cpp  SoundSystem.h
